# EtherCAT

./: .gitignore  Cargo.toml  DC_AND_STATES.md  EtherCAT.py  Notes for V2.md  OVERRUN_FIX_SUMMARY.md  README.md  USAGE.md  __init__.py  client.py  commands.py  complete_test.py  config_schema.py  constants.py  igh_master.py  master_adapter.py  process_manager.py  pyproject.toml  ruckig_addon.py  ruckig_planner.py  safe_shutdown.sh  semi_rotary_process.py  shm_layout.py  status_model.py  test_mode_switching.py  xml_decoder.py
XML/: Bohign_MS_ECAT_V2.4.10.xml
cia402/: __init__.py  driver.py
claude-sonnet-45-test/: SUMMARY.md  TEST_README.md  V1_V2_QUICK_REFERENCE.md
composer_1 test/: Master_Adapter_Report.md  V1_to_V2_Nuances.md  V2_Isolated_Process_Report.md  complete_test.py
docs/: NOTES.md  OVERRUN_FIX_SUMMARY.md  README.md  ethercat-master-build-guide-jetson.md  ethercat-master-build-guide.md  jetson-claim-i210-ec_igb.service  jetson-claim-i210-ec_igb.sh  rt-tuning-guide.md
gpt-5 test/: Master_Adapter_Report.md  V1_to_V2_Nuances.md  V2_Isolated_Process_Report.md  complete_test.py
src/: commands.rs  config.rs  constants.rs  ffi.rs  lib.rs  python.rs  ruckig.rs  runtime.rs  shm_layout.rs  status.rs  xml.rs
sttark_ethercat/: __init__.py  client.py  commands.py  config_schema.py  igh_master.py  process_manager.py  ruckig_planner.py  shm_layout.py  tracking_corrector.py
sttark_ethercat/cia402/: driver.py
sttark_ethercat/utils/: checks.py
