[package]
name = "ethercat_driver"
version = "0.1.0"
edition = "2021"
description = "Rust-first EtherCAT driver/runtime for the IgH master"
license = "MIT"

[lib]
name = "_ethercat_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
anyhow = "1"
libc = "0.2"
libloading = "0.8"
parking_lot = "0.12"
pyo3 = { version = "0.22", features = ["abi3-py39", "anyhow", "extension-module"], optional = true }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
